Typos in mapping fixed. Added date format. Added date format transformation.

--- a/data/rpol-comment-mapping.json
+++ b/data/rpol-comment-mapping.json
@@ -11,7 +11,8 @@
       "type": "long"
     },
     "timestamp": {
-      "type": "´date"
+      "type": "date",
+      "format": "yyyy-MM-dd'T'HH:mm:ssZZ"
     }
   }
 }
